--- a/ms_3_methods.Rmd
+++ b/ms_3_methods.Rmd
@@ -1,12 +1,12 @@
 
 # Methods
 
-**Comparison of taxonomic and regional distribution:** 
+__Comparison of taxonomic and regional distribution__:
 To examine the overall taxonomic distribution across the spatial datasets (Fig. 1A), we grouped species by taxonomic class and data source (IUCN, AquaMaps, or both), and examined the proportion of each class represented in each data source category.
 
 To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; species presence within a grid cell was determined by any non-zero overlap of a species polygon with the cell, and number of species per cell was simply the count of the species present.  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps.  We represented relative distribution of species count for each dataset by plotting average species count against latitude and longitude (Fig. 1B, 1C).
 
-**Comparison of paired maps:** 
+__Comparison of paired maps__:
 Using genus and species binomials as a matching key, we selected the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution.  To avoid double-counting, we removed subpopulations and species aliases.  We determined species presence within each spatial cell using the same criteria as outlined above.
 
 Overlaying paired distribution maps for a given species, we defined and calculated _distribution alignment_ and _area alignment_ and plotted these in Fig. 2A:
@@ -15,12 +15,12 @@ $$\alpha_{dist} = \frac{A_{small \cap large}}{A_{large}} * 100\%$$
 
 $$\alpha_{area} = \frac{A_{small}}{A_{large}} * 100\%$$
 
-For each species with ranges described in both IUCN and AquaMaps, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets. We visually inspected a random selection of paired distribution maps from each quadrant to identify possible mechanistic causes of misalignment.  To verify that IUCN predicted unsuitable habitat for depth limited species, we used QGIS (QGIS Development Team 2015) to overlay a selection of IUCN and AquaMaps maps with a 200 meter bathymetry contour.
+For each species with ranges described in both IUCN and AquaMaps, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets. We visually inspected a random selection of paired distribution maps from each quadrant to identify possible mechanistic causes of misalignment.  To verify that IUCN predicted unsuitable habitat for depth limited species, we used QGIS (19) to overlay a selection of IUCN and AquaMaps maps with a 200 meter bathymetry contour.
 
 **Methods for OHI case study: **
-Using methods and supplemental materials from OHI (Halpern et al. 2012, 2015), we modified the original code for OHI 2015 Species status (SPP), allowing for flexibility in prioritized data source and AquaMaps presence threshold.  We ran the SPP code three times, prioritizing IUCN over AquaMaps for a 0% threshold, and prioritizing AquaMaps over IUCN for both a 40% and 0% threshold.  We compared each of these to the output of the published OHI 2015 SPP model (which prioritizes IUCN over AquaMaps at a 40% threshold).
+Using methods and supplemental materials from OHI (3, 4), we modified the original code for OHI 2015 Species status (SPP), allowing for flexibility in prioritized data source and AquaMaps presence threshold.  We ran the SPP code three times, prioritizing IUCN over AquaMaps for a 0% threshold, and prioritizing AquaMaps over IUCN for both a 40% and 0% threshold.  We compared each of these to the output of the published OHI 2015 SPP model (which prioritizes IUCN over AquaMaps at a 40% threshold).
 
 **Methods for MPA Gap Analysis case study:** 
-Based upon the methods described in Klein et al. 2015, we reconstructed the analysis using the subset of protected areas (IUCN and UNEP-WCMC 2014) spatially covering a marine area and classified as IUCN I-IV. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of protected area and marine within each cell.  After verifying our results using the 2014 AquaMaps dataset, we updated the analysis using the 2015 AquaMaps dataset at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.  Finally, we combined AquaMaps data (at 0% threshold) and IUCN data, using AquaMaps for the `r format(n_spp_both, big.mark = ',')` overlapping species and again compared against the protected area raster.
+Based upon the methods described in Klein et al. (11), we reconstructed the analysis using the subset of protected areas from the World Database on Protected Areas (WDPA) (20) spatially covering a marine area and classified as IUCN I-IV. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of protected area and marine within each cell.  After verifying our results using the 2014 AquaMaps dataset, we updated the analysis using the 2015 AquaMaps dataset at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.  Finally, we combined AquaMaps data (at 0% threshold) and IUCN data, using AquaMaps for the `r format(n_spp_both, big.mark = ',')` overlapping species and again compared against the protected area raster.
 
-All processing was completed using R statistical software (R Core Team 2015), and all code and intermediate data are available on GitHub at https://github.com/OHI-Science/IUCN-AquaMaps.
+All processing was completed using R statistical software (21), and all code and intermediate data are available on GitHub at https://github.com/OHI-Science/IUCN-AquaMaps.
