--- a/data_explore/data_explore.Rmd
+++ b/data_explore/data_explore.Rmd
@@ -177,21 +177,25 @@ taxa_df <- taxa_am_all %>%
 #   theme(axis.text.x = element_text(angle = 75, hjust = 1))
 # print(bar_taxa1)
 
+#library(colorspace)
+#hclvec <- heat_hcl(3); colvec <- c('AquaMaps' = hclvec[1], 'Both' = hclvec[2], 'IUCN' = hclvec[3])
+#colvec <- c('AquaMaps' = '#1b9e77', 'Both' = '#565080', 'IUCN' = '#d95f02')
+colvec <- c('AquaMaps' = '#76A94C', 'Both' = '#e18258', 'IUCN' = '#9168a9')
+
 taxa_df_long2 <- taxa_df %>%
   dplyr::select(class, AquaMaps = n_am_class_solo, IUCN = n_iucn_class_solo, Both = n_class_both) %>%
   gather(dataset, n_spp, AquaMaps:Both) %>%
   group_by(class) %>%
   mutate(n_total = sum(n_spp, na.rm = TRUE),
          percent = n_spp/n_total * 100,
-         dataset = factor(dataset, levels = c('Both', 'IUCN', 'AquaMaps')))
+         dataset = factor(dataset, levels = c('AquaMaps', 'Both', 'IUCN'), ordered = TRUE)) %>%
+  arrange(desc(dataset))
 
 bar_taxa2 <- ggplot(taxa_df_long2, aes(x = class, y = percent, fill = dataset)) +
   ggtheme_plot + 
   theme(panel.grid.major.x = element_blank()) +
   geom_bar(stat = 'identity', alpha = .8) +
-#  scale_fill_manual(values = c('AquaMaps' = 'red', 'Both' = 'mediumorchid', 'IUCN' = 'blue')) +
- scale_fill_manual(values = c('AquaMaps' = '#1b9e77', 'Both' = '#565080', 'IUCN' = '#d95f02')) +
-#  scale_fill_manual(values = c('AquaMaps' = '#4dac26', 'Both' = '#fbe5c5', 'IUCN' = '#d01c8b')) +
+  scale_fill_manual(values = colvec) +
   geom_text(aes(label = sprintf('n = %s', n_total), y = 102), 
             size = 2, 
             angle = 90, hjust = 0, color = 'grey30') +
@@ -249,48 +253,30 @@ ggsave(filename = file.path(dir_fig, 'bar_by_taxa_all.png'),
 area_align_mean <- mean(spp_list$area_ratio, na.rm = TRUE)
 dist_align_mean <- mean(spp_list$sm_perc, na.rm = TRUE)
 
-### define representative species from each quadrant, for over-plotting
-# spp_quads <- c('q1' = 'Kajikia albida', 
-#                'q2' = 'Galaxea cryptoramosa', 
-#                'q4' = 'Acanthurus nigroris', 
-#                'q4a' = 'Metanephrops australiensis', 
-#                'q3' = 'Conus magnificus')
-# 
-### truncate the species names for the representative species
-# spp_list_label <- spp_list %>%
-#   filter(sciname %in% spp_rando) %>%
-#   separate(sciname, c('g', 's'), sep = ' ', remove = FALSE) %>%
-#   mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
-#   dplyr::select(-g, -s)
-
 ### mongo plot time
 scatter_quadplot <- ggplot(spp_list %>% 
                              transform(popn_category = reorder(popn_category, category_score)),
                            aes(x = area_ratio, 
                                y = sm_perc, 
-                               color = popn_category,
-                               size = lg_area_pct)) + 
+ #                               size = lg_area_pct,
+                               color = popn_category)) + 
   ggtheme_plot + 
   ### color the quadrant backgrounds:
     annotate("rect", xmin = area_align_mean, xmax = 100, 
                      ymin = dist_align_mean, ymax = 100, 
              alpha = .3, 
-#             fill= "green4")  + 
              fill= "#4dac26")  + 
     annotate("rect", xmax = area_align_mean, xmin =   0, 
                      ymin = dist_align_mean, ymax = 100, 
              alpha = .3, 
-#             fill= "greenyellow") + 
              fill= "#b8e186") + 
     annotate("rect", xmin = area_align_mean, xmax = 100, 
                      ymax = dist_align_mean, ymin =   0, 
              alpha = .3, 
-#             fill= "orange") + 
              fill= "#f1b6da") + 
     annotate("rect", xmax = area_align_mean, xmin =   0, 
                      ymax = dist_align_mean, ymin =   0, 
              alpha = .3, 
-#             fill= "orangered2") + 
              fill= "#d01c8b") + 
   geom_point(alpha = .6)
 
@@ -302,9 +288,9 @@ scatter_quadplot <- scatter_quadplot +
                                  'EN' = 'orange', 
                                  'CR' = 'orangered2',
                                  'DD' = 'grey30')) + 
-  scale_size_continuous(limits = c(0, 100),
-                        breaks = c( 0,    25,    50,    75,    100), 
-                        labels = c('0%', '25%', '50%', '75%', '100%')) + 
+#   scale_size_continuous(limits = c(0, 100),
+#                         breaks = c( 0,    25,    50,    75,    100), 
+#                         labels = c('0%', '25%', '50%', '75%', '100%')) + 
   scale_x_continuous(expand = c(0, 0), 
                      limits = c(0, 102),
                      breaks = c(seq(0, 100, 25)),
@@ -332,29 +318,13 @@ scatter_quadplot <- scatter_quadplot +
            fontface = 'bold.italic', angle = 0,
            label = sprintf('Mean = %s%%', round(dist_align_mean, 1)))
   
-### here are mean lines:
-# scatter_quadplot <- scatter_quadplot +
-#   geom_vline(x = area_align_mean,
-#              color = 'grey50', linetype = 'dashed') +
-#   geom_hline(y = dist_align_mean,
-#              color = 'grey50', linetype = 'dashed')
-
-### here are individual species, identified and namean on the plot:
-# scatter_quadplot <- scatter_quadplot +
-#   geom_point(data = spp_list_label, shape = 4, color = 'grey30', size = 4) + 
-#   geom_text(data = spp_list_label, 
-#             aes(label = sciname_label), 
-#             color = 'grey30',
-#             fontface = 'bold.italic',
-#             size = 2,
-#             hjust = .25,
-#             vjust = 1.5)
 
 scatter_quadplot <- scatter_quadplot +
-  labs(x = bquote('Area alignment '*alpha['ext']*' (%)'), 
+  labs(x = bquote('Area ratio '*alpha['ext']*' (%)'), 
        y = bquote('Distribution alignment '*alpha['dist']*' (%)'), 
 #       title = 'Distribution alignment vs Extent alignment',
-       color = 'Risk', size = '% ocean range') 
+#       size = '% ocean range',
+       color = 'Extinction\nRisk') 
 
 # print(scatter_quadplot)
 
