--- a/data_explore/data_explore_quadmaps.Rmd
+++ b/data_explore/data_explore_quadmaps.Rmd
@@ -62,113 +62,113 @@ spp_list <- read.csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv'), strings
 
 Quadrant map and quad breakdown by taxa and risk
 
+
 ``` {r pct_overlap_vs_ratio_of_area, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
 
-spp_list <- spp_list %>%
-  mutate(area_ratio = am_area / iucn_area,
-         area_ratio = ifelse(area_ratio > 1, 1 / area_ratio, area_ratio),
-         area_ratio = area_ratio * 100)
-
 ### define 25%, 50%, and 75% quartiles for both x and y axes
-area_ratio_quartiles <- quantile(spp_list$area_ratio, na.rm = TRUE)[2:4]
-pct_overlap_quartiles <- quantile(spp_list$sm_perc, na.rm = TRUE)[2:4]
+area_align_mean <- mean(spp_list$area_ratio, na.rm = TRUE)
+dist_align_mean <- mean(spp_list$sm_perc, na.rm = TRUE)
 
+### define representative species from each quadrant, for over-plotting
+spp_quads <- c('q1' = 'Kajikia albida', 
+               'q2' = 'Conus episcopatus', 
+               'q4' = 'Acanthurus nigroris', 
+               'q3' = 'Conus magnificus')
 
-# spp_rando <- c("Lagocephalus lagocephalus",
-#                "Makaira nigricans",
-#                "Pentacheles laevis",
-#                "Stereomastis suhmi",
-#                "Stereomastis surda") 
-# 
 ### truncate the species names for the representative species
-# spp_list_label <- spp_list %>%
-#   filter(sciname %in% spp_rando) %>%
-#   separate(sciname, c('g', 's'), sep = ' ', remove = FALSE) %>%
-#   mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
-#   dplyr::select(-g, -s)
+spp_list_label <- spp_list %>%
+  filter(sciname %in% spp_quads) %>%
+  separate(sciname, c('g', 's'), sep = ' ', remove = FALSE) %>%
+  mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
+  dplyr::select(-g, -s)
 
 ### mongo plot time
-scatter_arearatio_vs_overlap <- ggplot(spp_list %>% 
-                                         transform(popn_category = reorder(popn_category, category_score)),
-                                       aes(x = area_ratio, y = sm_perc, 
-                                           color = popn_category,
-                                           size = lg_area_pct)) + 
+scatter_quadplot <- ggplot(spp_list %>% 
+                             transform(popn_category = reorder(popn_category, category_score)),
+                           aes(x = area_ratio, 
+                               y = sm_perc, 
+                               color = popn_category)) + 
   ggtheme_plot + 
   ### color the quadrant backgrounds:
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
-                     ymin = pct_overlap_quartiles[2], ymax = 100, alpha = .3, fill= "green4")  + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
-                     ymin = pct_overlap_quartiles[2], ymax = 100, alpha = .3, fill= "greenyellow") + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
-                     ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orange") + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
-                     ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orangered2") + 
+    annotate("rect", xmin = area_align_mean, xmax = 100, 
+                     ymin = dist_align_mean, ymax = 100, 
+             alpha = .3, 
+             fill= "#4dac26")  + 
+    annotate("rect", xmax = area_align_mean, xmin =   0, 
+                     ymin = dist_align_mean, ymax = 100, 
+             alpha = .3, 
+             fill= "#b8e186") + 
+    annotate("rect", xmin = area_align_mean, xmax = 100, 
+                     ymax = dist_align_mean, ymin =   0, 
+             alpha = .3, 
+             fill= "#f1b6da") + 
+    annotate("rect", xmax = area_align_mean, xmin =   0, 
+                     ymax = dist_align_mean, ymin =   0, 
+             alpha = .3, 
+             fill= "#d01c8b") + 
   geom_point(alpha = .6)
 
 ### Manage scales for color and size 
-scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
+scatter_quadplot <- scatter_quadplot +
   scale_colour_manual(values = c('LC' = 'green4', 
                                  'NT' = 'greenyellow', 
                                  'VU' = 'yellow', 
                                  'EN' = 'orange', 
                                  'CR' = 'orangered2',
                                  'DD' = 'grey30')) + 
-  scale_size_continuous(limits = c(0, 100),
-                        breaks = c( 0,    25,    50,    75,    100), 
-                        labels = c('0%', '25%', '50%', '75%', '100%')) + 
-  scale_x_continuous(expand = c(0, 0), limits = c(0, 100)) +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100))
+  scale_x_continuous(expand = c(0, 0), 
+                     limits = c(0, 102),
+                     breaks = c(seq(0, 100, 25)),
+                     labels = c('0%', '25%', '50%', '75%', '100%')) +
+  scale_y_continuous(expand = c(0, 0),
+                     limits = c(0, 103),
+                     breaks = c(seq(0, 100, 25)),
+                     labels = c('0%', '25%', '50%', '75%', '100%'))
+
   
-### here are median labels:
-scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
+### here are mean labels:
+scatter_quadplot <- scatter_quadplot +
   annotate(geom = 'text',
-           x = area_ratio_quartiles[2], y = 5,
+           x = area_align_mean, y = 5,
            hjust = 0, vjust = 0,
-           color = 'grey50', size = 2,
+           color = 'grey30', 
+           size = 2,
            fontface = 'bold.italic', angle = 90,
-           label = sprintf('Median = %s%%', round(area_ratio_quartiles[2], 1))) +
+           label = sprintf('Mean = %s%%', round(area_align_mean, 1))) +
   annotate(geom = 'text',
-           x = 5, y = pct_overlap_quartiles[2],
+           x = 5, y = dist_align_mean,
            hjust = 0, vjust = 0,
-           color = 'grey50', size = 2,
+           color = 'grey30', 
+           size = 2,
            fontface = 'bold.italic', angle = 0,
-           label = sprintf('Median = %s%%', round(pct_overlap_quartiles[2], 1)))
+           label = sprintf('Mean = %s%%', round(dist_align_mean, 1)))
   
-### here are median lines:
-# scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
-#   geom_vline(x = area_ratio_quartiles[2],
-#              color = 'grey50', linetype = 'dashed') +
-#   geom_hline(y = pct_overlap_quartiles[2],
-#              color = 'grey50', linetype = 'dashed')
+### here are individual species, identified and namean on the plot:
+scatter_quadplot <- scatter_quadplot +
+  geom_point(data = spp_list_label, shape = 4, color = 'grey30', size = 4) + 
+  geom_text(data = spp_list_label, 
+            aes(label = sciname_label), 
+            color = 'grey30',
+            fontface = 'bold.italic',
+            size = 3,
+            hjust = .75,
+            vjust = 1.5)
 
-### here are 25% and 75% quantile lines:
-# scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
-#   geom_vline(x = area_ratio_quartiles[c(1, 3)],
-#              color = 'grey50', linetype = 'dashed') +
-#   geom_hline(y = pct_overlap_quartiles[c(1, 3)],
-#              color = 'grey50', linetype = 'dashed')
-  
-### here are individual species, identified and named on the plot:
-# scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
-#   geom_point(data = spp_list_label, shape = 4, color = 'grey30', size = 4) + 
-#   geom_text(data = spp_list_label, 
-#             aes(label = sciname_label), 
-#             color = 'grey30',
-#             fontface = 'bold.italic',
-#             size = 2,
-#             hjust = .25,
-#             vjust = 1.5)
-
-scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
-  labs(x = bquote('Extent alignment '*alpha['ext']*' (%)'), 
+scatter_quadplot <- scatter_quadplot +
+  labs(x = bquote('Area ratio '*alpha['ext']*' (%)'), 
        y = bquote('Distribution alignment '*alpha['dist']*' (%)'), 
-       title = 'Distribution alignment vs Extent alignment',
-       color = 'Risk', size = '% ocean range') 
+       color = 'Extinction\nRisk') 
 
-print(scatter_arearatio_vs_overlap)
+# print(scatter_quadplot)
 
+ggsave(file.path(dir_fig, 'si_scatter_quadmap_spp.png'),
+       width = 17.8, height = 9, units = 'cm')
 
 ```
+
+![](../figures/si_scatter_quadmap_spp.png)
+
+
 
 ``` {r plot_spp_from_quadrants, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
 ### define representative species from each quadrant, for over-plotting
@@ -184,7 +184,8 @@ for (i in 1:length(spp_quads)) { # i = 1
   
   spp_plot <- plot_rangemap(spp)
   spp_plot <- spp_plot + 
-    labs(title = element_blank())
+    labs(title = element_blank()) +
+    theme(legend.position = 'none')
 
   print(spp_plot)
   plotfile <- file.path(dir_fig, 'spp_maps', 
