--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -10,7 +10,7 @@ Knowing where species exist and thrive is fundamental to the sciences of ecology
  and managing and protecting species effectively.
 A rich literature tackles the many dimensions of these questions.
 
-One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (1) and International Union for Conservation of Nature (IUCN) (2).  These two spatial datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status (3, 4, 5), evaluating global biodiversity patterns (6, 7, 8, 9), predicting range shifts (10), and setting conservation priorities (11).
+One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (1) and International Union for Conservation of Nature (IUCN) (2).  These two spatial datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status (3, 4, 5), evaluating global biodiversity patterns (6, 7, 8, 9), predicting species range shifts (10), and setting conservation priorities (11).
 
 
 <!--
@@ -19,7 +19,7 @@ Three foundational papers relating to AquaMaps (Kaschner et al. 2006, 2011; Read
 
 The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (12, 13).
 
-To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
+To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of marine species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
 
 We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (3, 4) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (11) - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.
 
@@ -27,11 +27,11 @@ We then reexamine two recent marine biodiversity studies - an assessment of the 
 
 ## How and why the datasets differ
 
-The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" (2) - essentially a refined extent of occurrence, based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of "probability of occurrence" for each species (14, 15).  Studies frequently define "presence" for AquaMaps by applying a probability threshold, e.g., the Ocean Health Index defines presence as 40% or greater probability of occurrence (3, 4).
+The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" (2) - essentially a refined extent of occurrence, based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of "probability of occurrence" for each species (14, 15).  Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., the Ocean Health Index defines presence as 40% or greater probability of occurrence (3, 4).
 
 The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range (12).  By comparing maps resulting from IUCN and AquaMaps methodolog, we can identify and possibly address mechanistic causes for each type of error.
 
-The two datasets have notably different taxonomic (Fig. 1A) and regional (Figs. 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight bias in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
+The two datasets have notably different taxonomic (Fig. 1A) and regional (Figs. 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
@@ -72,10 +72,10 @@ To explore differences in species distribution and range between the two dataset
 
 The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supplemental materials (Fig. S1).  
 
-The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.  We expected to see significant concurrence between maps for IUCN Red List species of concern, assuming that increased attention would lead to improved understanding of species ranges; however, we found no compelling patterns to indicate that this was the case (Fig. S2).
+The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.  We expected to see significant concurrence between maps for IUCN Red List species of concern, assuming that increased attention would lead to improved understanding of species ranges; however, we found no compelling patterns to indicate that this was the case (Fig. S2).
 
 The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission  (Fig. S3). 
- Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
+ Ocean depth preference is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
 
 Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are meaningless when the distributions are poorly aligned.
 
@@ -84,7 +84,7 @@ The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neith
 
 # Implications
 
-Method-driven differences in commission and omission errors drive clear and significant differences in species range descriptions between AquaMaps and IUCN datasets.   To examine the implications of these differences, we repeated two recent studies, varying only the prioritization of one data set over the other.
+Method-driven differences in commission and omission errors produce clear and significant disagreement in species range descriptions between AquaMaps and IUCN datasets.   To examine the implications of these differences, we repeated two recent studies, varying only the prioritization of one data set over the other.
 
 **Case Study: The Ocean Health Index**
 
@@ -121,7 +121,7 @@ The global Ocean Health Index (OHI) (3, 4), a composite index comprising ten sus
 
 We calculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Reducing the threshold increases the apparent range of a species, so a decrease in a region’s score under scenario 1 would indicate increased spatial representation of threatened species for that region.  Shifting priority from IUCN to AquaMaps may increase or decrease a species’ apparent range, so a decrease in region score for scenario 2 may indicate a decrease in spatial representation of low-risk species, an increase in spatial representation of high-risk species, or a combination of both. Scenario three combines effects of scenarios 1 and 2.
  
-Given that only `r p_spp_both_ohi`% of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in substantial country-level score shifts as seen in scenarios 2 and 3.  While the mean global score did not vary significantly from scenario to scenario, select countries gained up to 7.5 points while others dropped as many as 5 points.  This result indicates that especially on a national or regional scale, an arbitrary change in how the two datasets are combined can result in a very different assessment of species conservation status.
+Given that only `r p_spp_both_ohi`% of species are included in both datasets, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in substantial country-level score shifts as seen in scenarios 2 and 3.  While the mean global score did not vary significantly from scenario to scenario, select countries gained up to 7.5 points while others dropped as many as 5 points.  This result indicates that especially on a national or regional scale, an arbitrary change in how the two datasets are combined can result in a different assessment of species conservation status.
 
 **Case Study: MPA Gap Analysis**
 
@@ -131,7 +131,7 @@ We recalculated the amount of under-protected and gap species using either IUCN 
 
 # Conclusions
 
-AquaMaps and IUCN range maps show reasonable agreement for many well-studied species, but substantial differences illustrate uncertainty in our understanding of spatial distribution for many others.  Although many other approaches exist for species distribution modeling, these two are the only ones applied globally to marine species.  Identifying and addressing differences in these datasets will increase their utility for research and conservation actions.  Several likely drivers of commission and omission errors between these datasets point to a few important ways to improve range alignment.
+AquaMaps and IUCN range maps show reasonable agreement for many well-studied species, but substantial differences illustrate uncertainty in our understanding of spatial distribution for many others.  Although many other approaches exist for species distribution modeling, these two are the only ones applied globally across different marine taxa.  Identifying and addressing differences in these datasets will increase their utility for research and conservation actions.  Several likely drivers of commission and omission errors between these datasets point to a few important ways to improve range alignment.
 
 For IUCN range data, clipping ranges to known depth limits improves output for many species, most notably corals and reef-associated fishes.  If species' depth limits are not known, simple rules of thumb will likely reduce commission errors without introducing substantial omission errors.  For example, for most corals, researchers could clip range maps to the photosynthetic limit of 200 meters.
  For AquaMaps range data, dependent primarily on environmental and physical preferences and conditions, implementing area restrictions based on biogeographical criteria such as Marine Ecoregions of the World (18) would likely decrease commission errors and improve predictive power, especially for data-poor species.
