--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -25,11 +25,9 @@ We then reexamine two recent marine biodiversity studies - an assessment of the 
 
 # Results and Discussion
 
-## How and why the datasets differ
+The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" (2) - essentially a refined extent of occurrence, based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global map of "probability of occurrence" for each species (14, 15).  Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., the Ocean Health Index defines presence as 40% or greater probability of occurrence (3, 4).
 
-The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" (2) - essentially a refined extent of occurrence, based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of "probability of occurrence" for each species (14, 15).  Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., the Ocean Health Index defines presence as 40% or greater probability of occurrence (3, 4).
-
-The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range (12).  By comparing maps resulting from IUCN and AquaMaps methodolog, we can identify and possibly address mechanistic causes for each type of error.
+The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range (12).  By comparing maps resulting from IUCN and AquaMaps methodologies, we can identify and possibly address mechanistic causes for each type of error.
 
 The two datasets have notably different taxonomic (Fig. 1A) and regional (Figs. 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
 
@@ -72,12 +70,12 @@ To explore differences in species distribution and range between the two dataset
 
 The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supplemental materials (Fig. S1).  
 
-The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.  We expected to see significant concurrence between maps for IUCN Red List species of concern, assuming that increased attention would lead to improved understanding of species ranges; however, we found no compelling patterns to indicate that this was the case (Fig. S2).
+The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
 
 The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission  (Fig. S3). 
  Ocean depth preference is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
 
-Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are meaningless when the distributions are poorly aligned.
+Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are unhelpful when the distributions are poorly aligned.
 
 The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor area match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) (16) and the Global Biodiversity Information Facility (GBIF) (17)) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
 
@@ -117,7 +115,7 @@ p_spp_both_ohi <- round(n_spp_both_ohi/n_spp_ohi * 100, 1)
 
 ```
 
-The global Ocean Health Index (OHI) (3, 4), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from Red List-assessed species in both IUCN and AquaMaps datasets (n = `r format(n_spp_ohi, big.mark = ',')`), prioritizing IUCN data for the `r format(n_spp_both_ohi, big.mark = ',')` species included in both sources.  OHI currently uses a probability of occurrence threshold of 40% to determine species presence for AquaMaps data.  
+The global Ocean Health Index (OHI) (3, 4), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distribution data from Red List-assessed species in both IUCN and AquaMaps datasets (n = `r format(n_spp_ohi, big.mark = ',')`), prioritizing IUCN data for the `r format(n_spp_both_ohi, big.mark = ',')` species included in both sources.  OHI currently uses a probability of occurrence threshold of 40% to determine species presence for AquaMaps data.  
 
 We calculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Reducing the threshold increases the apparent range of a species, so a decrease in a region’s score under scenario 1 would indicate increased spatial representation of threatened species for that region.  Shifting priority from IUCN to AquaMaps may increase or decrease a species’ apparent range, so a decrease in region score for scenario 2 may indicate a decrease in spatial representation of low-risk species, an increase in spatial representation of high-risk species, or a combination of both. Scenario three combines effects of scenarios 1 and 2.
  
@@ -125,9 +123,9 @@ Given that only `r p_spp_both_ohi`% of species are included in both datasets, it
 
 **Case Study: MPA Gap Analysis**
 
-Klein et al. (11) compare the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect species and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
+Klein et al. (11) compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
-We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using 2015 AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig4'>Fig. 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
+We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using the most recent AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig4'>Fig. 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
 
 # Conclusions
 
