--- a/ms_3_methods.Rmd
+++ b/ms_3_methods.Rmd
@@ -7,7 +7,7 @@ To examine the overall taxonomic distribution across the spatial datasets (Fig. 
 To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; species presence within a grid cell was determined by any non-zero overlap of a species polygon with the cell, and number of species per cell was simply the count of the species present.  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps.  We represented relative distribution of species count for each dataset by plotting average species count against latitude and longitude (Fig. 1B, 1C).
 
 __Comparison of paired maps__:
-Using genus and species binomials as a matching key, we selected the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution.  To avoid double-counting, we removed subpopulations and species aliases.  We determined species presence within each spatial cell using the same criteria as outlined above.
+Using genus and species binomials as a matching key, we selected the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution.  To avoid double-counting, we removed subpopulations and species aliases.  We determined species presence within each spatial cell using the same criteria outlined above.
 
 Overlaying paired distribution maps for a given species, we defined and calculated _distribution alignment_ and _area ratio_ and plotted these in Fig. 2A:
 
@@ -15,9 +15,9 @@ $$\alpha_{dist} = \frac{A_{small \cap large}}{A_{large}} * 100\%$$
 
 $$\alpha_{area} = \frac{A_{small}}{A_{large}} * 100\%$$
 
-For each species with ranges described in both IUCN and AquaMaps, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets. We visually inspected a random selection of paired distribution maps from each quadrant to identify possible mechanistic causes of misalignment.  To verify that IUCN predicted unsuitable habitat for depth limited species, we used QGIS (19) to overlay a selection of IUCN and AquaMaps maps with a 200 meter bathymetry contour.
+For each species with ranges described in both IUCN and AquaMaps, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets. We visually inspected a random selection of paired distribution maps from each quadrant to identify possible mechanistic causes of misalignment.  To verify that IUCN predicted unsuitable habitat for depth limited species, we used QGIS (19) to overlay a selection of IUCN and AquaMaps maps with a 200-meter bathymetry contour.
 
-**Methods for OHI case study: **
+**Methods for OHI case study:**
 Using methods and supplemental materials from OHI (3, 4), we modified the original code for OHI 2015 Species status (SPP), allowing for flexibility in prioritized data source and AquaMaps presence threshold.  We ran the SPP code three times, prioritizing IUCN over AquaMaps for a 0% threshold, and prioritizing AquaMaps over IUCN for both a 40% and 0% threshold.  We compared each of these to the output of the published OHI 2015 SPP model (which prioritizes IUCN over AquaMaps at a 40% threshold).
 
 **Methods for MPA Gap Analysis case study:** 
