--- a/ms_supplemental.Rmd
+++ b/ms_supplemental.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "Supplemental Information"
+title: "Supplemental Information: Aligning marine species range data to better serve science and conservation"
+author: "Casey O'Hara, Jamie C. Afflerbach, Courtney Scarborough, Benjamin S. Halpern"
 output:
   word_document: default
   pdf_document:
@@ -31,56 +32,66 @@ Movies: Supply Audio Video Interleave (avi), Quicktime (mov), Windows Media (wmv
 Still images: Authors must provide a still image from each video file. Supply TIFF, EPS, high-resolution PDF, JPEG, or GIF files.
 Appendices: PNAS prefers that authors submit individual source files to ensure readability. If this is not possible, supply a single PDF file that contains all of the SI associated with the paper. This file type will be published in raw format and will not be edited or composed.
 -->
-
-<!--## Data processing - should this go in methods??? -->
-
 <!--
+# Data sources and methods
+
 All code is publicly available and freely downloadable [here on GitHub](link to github).
+
+## AquaMaps
 
 AquaMaps data was provided by AquaMaps directly via ftp. Three SQL files were sent that contained (1) list of all 22,889 modeled species and their taxonomic information, (2) information for all (259,200) half degree cells used for range mapping and (3) the probability of occurrence per cell for all 22,889 species. These were extracted into .csv form using R Statistical Software. 
 
+## IUCN
+
 As of December 2015, IUCN had published species distribution maps for XXX marine species across 24 taxonomic groups.  For this analysis, we did not consider IUCN range maps for bird species, as those data are hosted separately by BirdLife International.
 
-Each shapefile contains polygon limits of distribution indicating regions of presence/absence, additional attributes provide information on extant/extinct ranges, native/introduced ranges, and seasonality.-->
+Each shapefile contains spatial polygons outlining limits of distribution for each species, indicating regions of presence/absence; additional attributes provide information on extant/extinct ranges, native/introduced ranges, and seasonality.
+-->
 
-## S1: sample maps from each quadrant
+## Representative maps from each quadrant
 
 ![](figures/si_four_maps.png)
 
->  __Fig. S1.__ Representative species maps to illustrate each quadrant from Fig. 2A.  Note that A-D are arranged to match quadrants in Fig. 2A.
-(A: well-matched) Kajikia albida
-(B: distribution-matched) Conus episcopatus
-(C: area-matched) Conus magnificus
-(D: poorly-matched) Acanthurus nigroris
+>  __Fig. S1.__ Representative species maps to illustrate each quadrant from Fig. 2A.  Note that B-E are arranged to match quadrants in Fig. S1A. (A) Alternative version of Figure 2A that includes extinction risk categories for each species.  Four representative species, one from each quadrant, are mapped in (B-E).
+(B) Well-matched: Kajikia albida, the Atlantic white marlin.  Ranges from each data set show nearly complete overlap, and very similar area of coverage.
+(C) Distribution-matched: Conus episcopatus, the dignified cone snail.  Ranges shows excellent overlap in the western Pacific, though IUCN range extends beyond the bounds of the AquaMaps range.
+(D) Area-matched: Conus magnificus, the magnificent cone snail.  Ranges overlap in the southern Pacific, but align poorly elsewhere.  The total area for each range is similar.
+(E) Poorly-matched: Acanthurus nigroris, the blue-lined surgeonfish.  IUCN predicts species range only near the Hawaiian islands; AquaMaps predicts extensive range throughout the central and western Pacific Ocean.  The datasets align in neither distribution nor area of coverage.
 
 
-## S2: Risk by quadrant
+## Risk by quadrant
 
 <a id = 'S2'></a>
 
 ![](figures/si_barchart_spp_risk_quads.png)
 
->  __Fig. S2.__ Breaking down the quadrants by IUCN extinction risk categories (Fig. S2), we found little support for our hypothesis that maps for species with higher extinction risk tend to be better aligned between the two datasets, perhaps correlated to increased expert scrutiny.
+>  __Fig. S2.__ Breakdown of quadrants (Fig. S1A) by IUCN extinction risk categories.  IUCN and Aquamaps ranges were in better agreement (i.e., had a higher probability of being in the upper-right, "well-aligned" quadrant, Figure 2A/Figure S1A) for species at greater risk according to IUCN risk categories (p < 0.001, generalized linear model, family = binomial, Table S1).  This suggests at-risk species may receive more attention in terms of data collection or model refinement.  
 
-### S3: Coral depth map
+> __Table S1.__  Generalized linear model (family = binomial) describing how the agreement between IUCN and Aquamap range maps (i.e., probability of occurring in quadrant 1, Figure 2A/S1A) increases for a species as its IUCN risk status increases.  For this analysis, we excluded all species that had "data deficient" IUCN status (n = 255).  We analyzed the IUCN risk categories as a continuous variable (LC = 0.0, NT = 0.2, VU = 0.4, EN = 0.6, CR = 0.8, EX = 1.0).
+
+_Model: glm(quadrant 1 membership ~ IUCN category, family = binomial) n = 2,059_
+
+| Coefficients:  | Estimate | Std. Error | z value | p value      |
+| :-----         |   -----: |     -----: |  -----: |       -----: |
+| Intercept      | -1.32933 |   0.05804  | -22.902 | < 2e-16 ***  |
+| IUCN category  |  1.18672 |   0.33469  |   3.546 | 0.000391 *** |
+
+
+### Coral depth map
 
 <a id = 'S3'></a>
 
 ![oculina varicosa](figures/si_coralmap.png)
 
-<!--
-Oculina varicosa - Ivory tree coral ![oculina_pic.jpg](figures/oculina/oculina_pic.jpg)
--->
+>  __Fig. S3.__ IUCN-defined range of _Oculina varicosa_, a typical photosynthetic coral, plotted against a 200 m bathymetry contour. According to IUCN, _O. varicosa_ can be found to depths of 152 m.  Maps of many other coral species and other reef-associated organisms followed similar patterns.
 
->  __Fig. S3.__ IUCN-defined range of _Oculina varicosa_, a typical photosynthetic coral, plotted against a 200 m bathymetry contour. According to IUCN, _O. varicosa_ can be found to depths of 152 m.
-
-### S4: AquaMaps threshold examination
+### AquaMaps threshold examination
 
 <a id = 'S4'></a>
 
-AquaMaps distribution maps indicate "probability of occurrence" within each 0.5° cell, with values ranging from zero to one, rather than a simple present/absent value as indicated by IUCN maps.  Many studies convert this AquaMaps probability to a simple presence value by assigning a threshold value.  A higher threshold constrains an analysis to cells with near certainty of occurrence, while a low threshold captures larger areas of increasingly marginal suitability.
+AquaMaps distribution maps indicate "probability of occurrence" within each 0.5° cell, with values ranging from zero to one, rather than a simple present/absent value as indicated by IUCN maps.  Many studies convert this AquaMaps probability to a simple presence value by assigning a threshold value.  
 
-For our comparisons of global distribution of represented biodiversity and spatial alignment between datasets, we considered "present" to be any cell with a non-zero probability of occurrence, to best approximate the "limits of distribution" as indicated by IUCN maps.  To examine the effect of different presence threshold selections on the represented range of a species, we varied the threshold from 0% to 100% and calculated the average species range relative to a zero threshold.
+To examine the effect of different presence threshold selections on the represented range of a species, we varied the threshold from 0% to 100% and calculated the average species range relative to a zero threshold.
 
 A. 
 ![](figures/si_am_threshold.png) 
@@ -88,7 +99,7 @@ A.
 B. 
 ![](figures/si_ribbon_am_threshold.png)
 
->  __Fig. S4.__ AquaMaps distribution map extent remaining after applying a presence threshold.  (A) A 40% threshold applied to all species in the AquaMaps dataset shows a mean loss of 28% of total range, with a wide distribution in which some species lose nearly all of their apparent range.  (B) Median remaining extent at increments of presence threshold. Dark green ribbon includes 25% to 75% quantiles of remaining species range, while lighter ribbon includes 5% to 95% quantiles.  Incrementing the presence threshold from 0.00 to 1.00 for the entire AquaMaps dataset, the shallow downward trend indicates a low but consistent sensitivity of apparent species range to threshold choice, with no surprising tradeoffs that could suggest an "optimal" threshold.
+>  __Fig. S4.__ AquaMaps distribution map extent remaining after applying a presence threshold. A higher threshold constrains an analysis to cells with near certainty of occurrence, while a low threshold captures larger areas of increasingly marginal suitability. (A) A 40% threshold applied to all species in the AquaMaps dataset shows a mean loss of 28% of total range compared to a 0% threshold, with a wide distribution in which some species lose nearly all of their apparent range.  (B) Median remaining extent at increments of presence threshold. Dark green ribbon includes 25% to 75% quantiles of remaining species range, while lighter ribbon includes 5% to 95% quantiles.  Incrementing the presence threshold from 0.00 to 1.00 for the entire AquaMaps dataset, the shallow downward trend indicates a low but consistent sensitivity of apparent species range to threshold choice, with no surprising tradeoffs that could suggest an "optimal" threshold.
 
 
 <!--
@@ -104,77 +115,9 @@ ___why so many gaps and 10+ species show up with IUCN.  I will write up a paragr
 - hypothesis to explain more 10%+ species - ten random samples most have IUCN polygons just east of Australia where a large MPA is indicated - Great Barrier Reef I assume - a single large poly falling in GBR gets a high score, while for the same species, many of the AM ranges (also in same area) scatter suitable area over larger extent, so lower percent of species range is protected
     - introducing errors: IUCN = likely omission (skipping possible real habitat outside of MPAs) and likely commission (possibly overcounting real habitat in MPAs e.g. GBR); AquaMaps = probably a little commission (possibly underestimating, if it overpredicts lots of range outside MPAs, thus reducing the proportion of protected range)
 -->
-    
+
 <!--
 #### Caveats
 For example, as of this writing, IUCN has released no spatial data for class Elasmobranchii (cartilaginous fishes including sharks and rays); and while IUCN offers a large number of maps within class Actinopterygii (ray-finned bony fishes), the available maps include only a few primarily tropical taxonomic sub-groups, such as wrasses, damselfish, butterflyfish, tunas, and billfishes, but are missing economically important subgroups including salmon, rockfish, and clupeids.  However, IUCN's criterion of comprehensive assessment greatly reduces the risk of sample bias within the bounds of the assessed taxonomic groups.
 -->
 
-<!--
-___Red List inclusion:___
-
-![](figures/bar_by_taxa_assessed.png)-->
-
-<!--
-
-a few codes to indicate likely problems?
-
-- DC = depth clipping; IUCN extents go beyond reasonable depth for the species
-- DX = data excluded; AM excludes some observations that appear to be used for IUCN
-- DP = data poor (AquaMaps acknowledges data poor status? or use less than 10 data points as criteria)
-- NX = needs evaluation by expert; AM model likely predicts areas where species is unlikely to be found based on observed occurrences - does AM model reflect same as AM suitable habitat?
-
-Q2:
-
-| species                | quad | group           | codes   | notes |
-| -------                | ---- | -----           | -----   | ----- |
-| Conus episcopatus      | q2   | cones           |  DP, DX | d-match around Coral Triangle, but IUCN shows much more around Indian Ocean and S Pacific; also IUCN extents
-| Ctenochaetus binotatus | q2   |                 |         | IUCN extents beyond AM
-| Naso vlamingii         | q2   | acanthuridae    |         | IUCN extents beyond AM
-| Thalassoma purpureum   | q2   | wrasses         |         | IUCN extents beyond AM
-| Porites nigrescens     | q2   | corals 2        | DP      | AM limited to CT; IUCN shows far greater dist, and extents
-| Conus ammiralis        | q2   | cones           | DP      | AM  | limited to CT, IUCN shows in Madagascar; also extents
-| Conus tessulatus       | q2   | cones           |         | extents
-| Acropora sarmentosa    | q2   | corals 1        |         | extents; also AM shows HI but IUCN does not?
-| Holothuria fuscogilva  | q2   | sea cucumbers   |         | extents; also AM shows Mex and Central Am west coast, but IUCN does not (not available online?)
-| Oculina Varicosa       | q2   | corals 2        |         | lim to Caribbean; extents - this might be a good close-up map
-| Acanthocybium solandri | q2   | tunas/billfish  |         | mostly tropical by IUCN; AM shows much farther N and S
-
-Q3
-
-| species                | quad | group           | codes   | notes |
-| -------                | ---- | -----           | -----   | ----- |
-| Conus magnificus       | q3   |  cones          |         | IUCN distribution is more limited than AM distribution)
-| Abudefduf concolor     | q3   |  damselfish     |         | Baja for AM, southern Central Am for IUCN; maybe a good closeup map?  AM points from Baja to Peru incl Galapagos; some rejected pts from Caribbean and eastern Atlantic
-| Centropyge aurantonotus | q3  |  angelfish      |         | AM shows Caribbean; IUCN shows northern South America, also maybe a good closeup map? AM points from FL to south Brazil, but no Gulf of Mexico.
-| Chlorurus perspicillatus | q3 |  parrotfish     |         | IUCN shows only HI; AM shows dots all over S Pacific and near Marianas Islands
-| Sarda orientalis        | q3  |  tunas/billfish |         | limited dists by IUCN
-| Montastraea franksi     | q3  |  corals 2       | DP      | IUCN shows just in Caribbean; AM shows all up & down east coast of N America and S America
-
-Q4
-
-| species                  | quad | group   | codes   | notes |
-| -------                  | ---- | -----   | -----   | ----- |
-| Acanthurus nigroris      | q4   |         |         | IUCN dist limited to HI, while AM shows all over S Pacific and CT - AM observations all over S pacific...
-| Praealticus tanegasimae  | q4   | blenny  |         | IUCN shows limited dist around Japan/Marianas; AM shows much broader through CT and W Pacific - good local map?
-| Stethojulis marquesensis | q4   | wrasse  |         | IUCN shows only small cluster of islands (Marquesas?) while AM shows much broader across S Pacific
-| Canthigaster leoparda    | q4   | puffer  |         | IUCN limited spots around a couple of islands; AM shows all throughout CT
-| pentacheles snyderi      | q4   | lobster | DP      | AM shows all over - sim to depth profiles? while IUCN shows only a couple patches - HI? S Pacific, and S Indian oceans?  AM limits to specific FAO regions, which results in odd cutoffs; also shows some data points in N Atlantic which has an odd result.
-| Nephropsis sulcata       | q4   | lobster |         | IUCN shows odd ranges, most of which don't overlap with AM
-
--->
-
-
-<!--
-___table to show data poor status and reviewed status for AquaMaps maps represented in the quadrant plot___ _- perhaps update the quadrant plot to reveal data-poor species (and reviewed species? little overlap of reviewed & data-poor) instead of, say, red-list category which doesn't get discussed in the body of the paper?  then this table can go in SOM if we like it_
-
-| quadrant | n species | n data poor species | mean (median) data points | n reviewed species |
-| :------: | :-------: | :-----------------: | :-----------------------: | :----------------: |
-| all AM   |   22889   |        8749 (38.2%) |          57.1 (16)        |       1296  (5.7%) |
-| AM&IUCN  |    2166   |         457 (21.1%) |          89.9 (33)        |        290 (13.4%) |
-|   q1     |     401   |          33  (8.2%) |         233.0 (78)        |        100 (24.9%) |
-|   q2     |     682   |         151 (22.1%) |          77.4 (39)        |        100 (14.7%) |
-|   q3     |     682   |         114 (16.5%) |          52.4 (29)        |         65  (9.5%) |
-|   q4     |     410   |         159 (39.7%) |          32.1 (13)        |         25  (6.2%) |
-
--->
